# Seed

./: .env.example  .gitignore  MENU_GUIDE.md  README.md  README_RISK.md  README_TERMUX.md  TERMUX.md  check_dexscreener.py  crypto.py  dexscreener.py  ed25519_pure.py  install_termux.sh  install_termux_setup.sh  jupiter.py  logger.py  pyproject.toml  requirements.txt  rpc.py  run.sh  run_risk.sh  run_termux.sh  setup_termux.sh  simulacro.py  solana_bot_alpha.py  solana_bot_beta.py  solana_bot_complete.py  solana_bot_risk.py  solana_utils.py  termux.md  trading_real.py  transaction.py  wallet.py
solana_bot/: __init__.py  storage.py
solana_bot/clients/: __init__.py  dexscreener.py
solana_bot/config/: __init__.py  bot_config.py  schema.json
solana_bot/menu/: __init__.py  handlers.py  interactive.py  widgets.py
tests/: test_dexscreener.py
